@@ -1,6 +1,7 @@
 Version 1.0.6 (released ??-???-????)
 
   * fix bug in regexp search filter when used with sticky tag (issue #346)
+  * fix bug in handling of certain 'co' output (issue #348)
 
 Version 1.0.5 (released 28-Feb-2008)
 
